# localPlannerBench

./: .gitignore  LICENSE  README.md  api.html  example.html  experiment_config.html  genindex.html  getting_started.html  index.html  introduction.html  objects.inv  pyproject.toml  search.html  searchindex.js  structure.html  tags
.github/workflows/: docs_pages.yaml  integrationTest.yml  unitTest.yml
1_comparison_MPC/planarArm/: run_series.sh
1_comparison_MPC/planarArm/fabrics/: planner.py
1_comparison_MPC/planarArm/mpc/: createMPCSolver.py  planner.py
1_comparison_MPC/planarArm/setup/: exp.yaml  fastFabric.yaml  mpc.yaml  problem.yaml
1_comparison_MPC/pointMass/: run_experiment.py  run_series.sh
1_comparison_MPC/pointMass/fabrics/: planner.py
1_comparison_MPC/pointMass/mpc/: createMPCSolver.py  planner.py
1_comparison_MPC/pointMass/setup/: exp.yaml  fabric.yaml  infeasibleExp.yaml
1_comparison_MPC/realPanda/: run_experiment.py
1_comparison_MPC/realPanda/fabrics/: planner.py
1_comparison_MPC/simPanda/: run_experiment.py
1_comparison_mpc/planarArm/: run_experiment.py
1_comparison_mpc/pointMass/: run_experiment.py
1_comparison_mpc/simPanda/: run_experiment.py
_sources/: index.rst.txt  introduction.rst.txt
docs/source/: api.rst  conf.py  example.rst  experiment_config.rst  getting_started.rst  index.rst  introduction.rst  structure.rst
examples/: .gitignore
examples/panda_arm/: runner.yaml
examples/planar_arm/: runner.yaml
examples/point_robot/: config.yaml  runner.yaml
generic/: experiment.py  experimentSaver.py  fabricPlanner.py  mpcPlanner.py  runner  runner.py
generic/mpc/: createMPCSolver.py  makeSolver.py  parameterMap.py  solverCollection_pointMass_solver_n2_05_N10.mat  solverCollection_pointMass_solver_n2_05_N10_model.c  solverCollection_pointMass_solver_n2_05_N10_model.h  test.mat  test_model.c  test_model.h
generic/testSetupFiles/: fabricPlanar.yaml  fabricPoint.yaml  mpcPlanar.yaml  mpcPoint.yaml  planar_exp.yaml  planar_exp_4.yaml  point_exp.yaml
infrastructure/: abstractPlanner.py  expSetup.py  fabricPlanner.py  metrics.py  motionPlanningGoal.py  postProcessor  ros_converter_node.py  runner.py  subGoal.py  variables.py
plannerbenchmark/assets/: boxer.urdf  point_robot.urdf
plannerbenchmark/exec/: postProcessor  post_processor.py  runner  runner.py  slimPostProcessor
plannerbenchmark/generic/: config_signatures.py  experiment.py  experimentSaver.py  fabricPlanner.py  global_planner.py  logger.py  mpcPlanner.py  planner.py  planner_registry.py  runner  utils.py
plannerbenchmark/planner/: __init__.py  acadosMpcPlanner.py  fabricPlanner.py  forcesProMpcPlanner.py  mpcPlanner.py  pdPlanner.py  sensorFabricPlanner.py
plannerbenchmark/postProcessing/: caseEvaluation.py  casePlotting.py  genericPostProcessor  helpers.py  makeSeriesPlot.gnuplot  makeSuccessPlot.gnuplot  metrics.py  seriesComparison.py  seriesComparisonPlotting.py  seriesEvaluation.py  seriesPlotting.py
plannerbenchmark/ros/: ros_converter_node.py  rviz_config.rviz
plannerbenchmark/tests/: test_functions.py  test_integration.py  test_local.py
postProcessing/: createSeriesPlot  createSuccessPlot  evaluateSeries.py  genericPostProcessor  makeSeriesPlot.gnuplot  makeSuccessPlot.gnuplot  metrics.py  postProcessor
postProcessing/plottingPanda/: createPlot  extractFks  makeSolverTimePlot.gnuplot  makeTrajectoryPlot.gnuplot
postProcessing/plottingPlanarArm/: createPlot  createPlots  extractFks  makeTrajectoryPlot.gnuplot  makeTrajectoryPlots.gnuplot
postProcessing/plottingPointMass/: createPlots  makeTrajectoryPlot.gnuplot  makeTrajectoryPlots.gnuplot
scripts/: ci_script.sh
tests/: integration_test.py
tools/generic/: abstractPlanner.py  fabricPlanner.py  mpcPlanner.py  runner
tools/postProcessing/: genericPostProcessor  makeSeriesPlot.gnuplot
(+497 files in other folders)
