[tool.poetry]
name = "plannerbenchmark"
version = "0.3.0"
description = "Benchmark suite for local planner in dynamic environment."
authors = ["Max Spahn <m.spahn@tudelft.nl>"]

[tool.poetry.dependencies]
python = "^3.6.5,<3.10"
planarenvs = "^1.0.3" 
urdfenvs = "^0.2.2"
motion-planning-scenes= "^0.1.22"
forwardkinematics = "^1.0.4"
#fabrics = {path = "../../../../code/fabrics", optional = true}
robotmpcs = {version = "^0.1.4", optional = true}
pyinstaller = "^4.0"

[tool.poetry.extras]
fabric = ['fabrics']
mpc = ['robotmpcs']

[tool.poetry.scripts]
runner = 'plannerbenchmark.exec.runner:newmain'
post_process = 'plannerbenchmark.exec.post_processor:main'

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^6.2"
pylint = "^2.13.3"
Sphinx = "4.2.0"
sphinx-rtd-theme = "1.0.0"
sphinxcontrib-napoleon = "0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
