[tool.poetry]
name = "plannerbenchmark"
version = "1.0.0"
description = "Benchmark suite for local planner in dynamic environments. Multiple planners can be compared on different kinematic chains in different environment. The suite is highly extendable for new planners, robots and environments."
authors = ["Max Spahn <m.spahn@tudelft.nl>"]
maintainers = [
  "Max Spahn <m.spahn@tudelft.nl>",
  "Chadi Salmi <c.salmi@tudelft.nl"
]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://maxspahn.github.io/localPlannerBench/"
documentation = "https://maxspahn.github.io/localPlannerBench/"
repository = "https://github.com/maxspahn/localPlannerBench"
keywords = ["robotics", "motion-planning", "benchmark"]

[tool.poetry.dependencies]
python = "^3.6.5,<3.10"
planarenvs = "^1.0.3" 
urdfenvs = "^0.2.2"
motion-planning-scenes= "^0.1.22"
forwardkinematics = "^1.0.4"
robotmpcs = {version = "^0.1.4", optional = true}
#fabrics = {path = "../../../../code/fabrics", optional = true}

[tool.poetry.extras]
fabric = ['fabrics']
mpc = ['robotmpcs']

[tool.poetry.scripts]
runner = 'plannerbenchmark.exec.runner:main'
post_process = 'plannerbenchmark.exec.post_processor:main'

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^6.2"
pylint = "^2.13.3"
Sphinx = "4.2.0"
sphinx-rtd-theme = "1.0.0"
sphinxcontrib-napoleon = "0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
